generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./dbml"
}

model Admin {
  id       String @id
  username String @unique
}

model Student {
  id          String             @id
  username    String             @unique
  name        String
  surname     String
  /// Mirrors Parent.email (siblings can share), so must NOT be unique.
  email       String?
  phone       String?            @unique
  address     String
  img         String?
  bloodType   String
  sex         UserSex
  createdAt   DateTime           @default(now())
  parentId    String
  classId     Int
  gradeId     Int
  birthday    DateTime
  /// Default agreed drop-off time (HH:mm), optional
  bringTime   String?
  /// Default agreed pickup time (HH:mm), optional
  pickupTime  String?
  attendances Attendance[]
  class       Class              @relation(fields: [classId], references: [id])
  grade       Grade              @relation(fields: [gradeId], references: [id])
  parent      Parent             @relation(fields: [parentId], references: [id])
  lunchGroup  StudentLunchGroup?
  lunchVote   StudentLunchVote?
  studentZone StudentZone?
  zoneHistory ZoneHistory[]
}

model Teacher {
  id        String        @id
  username  String        @unique
  name      String
  surname   String
  email     String?       @unique
  phone     String?       @unique
  address   String
  img       String?
  bloodType String
  sex       UserSex
  createdAt DateTime      @default(now())
  birthday  DateTime
  classes   Class[]
  lessons   Lesson[]
  zones             TeacherZone[]
  teacherLunchGroups TeacherLunchGroup[]
  teacherAttendances TeacherAttendance[]
}

/// Daily present/absent for an educator (calendar day, UTC range); used to filter Lunch/Play boards.
model TeacherAttendance {
  id        Int      @id @default(autoincrement())
  date      DateTime
  present   Boolean
  teacherId String
  /// Daily checkout time (HH:mm) when educator is picked up / checked out.
  actualPickupTime String?
  teacher   Teacher  @relation(fields: [teacherId], references: [id], onDelete: Cascade)

  @@unique([teacherId, date])
}

model Parent {
  id        String    @id
  username  String    @unique
  name      String
  surname   String
  email     String?   @unique
  phone     String    @unique
  address   String
  createdAt DateTime  @default(now())
  students  Student[]
}

model Grade {
  id       Int       @id @default(autoincrement())
  level    Int       @unique
  classess Class[]
  students Student[]
}

model Class {
  id            Int            @id @default(autoincrement())
  name          String         @unique
  capacity      Int
  supervisorId  String?
  gradeId       Int
  announcements Announcement[]
  grade         Grade          @relation(fields: [gradeId], references: [id])
  supervisor    Teacher?       @relation(fields: [supervisorId], references: [id])
  events        Event[]
  lessons       Lesson[]
  students      Student[]
}


model Lesson {
  id          Int          @id @default(autoincrement())
  name        String
  day         Day
  startTime   DateTime
  endTime     DateTime
  zoneId      String
  classId     Int
  teacherId   String
  attendances Attendance[]
  class       Class        @relation(fields: [classId], references: [id])
  zone        Zone         @relation(fields: [zoneId], references: [id])
  teacher     Teacher      @relation(fields: [teacherId], references: [id])
}



model Attendance {
  id                Int      @id @default(autoincrement())
  date              DateTime
  present           Boolean
  studentId         String
  lessonId          Int
  /// Daily override for pickup time (HH:mm). If null, use Student.pickupTime.
  actualPickupTime  String?
  note              String?
  lesson            Lesson   @relation(fields: [lessonId], references: [id])
  student           Student  @relation(fields: [studentId], references: [id])
}

model Event {
  id          Int      @id @default(autoincrement())
  title       String
  description String
  startTime   DateTime
  endTime     DateTime
  classId     Int?
  class       Class?   @relation(fields: [classId], references: [id])
}

model Announcement {
  id          Int                 @id @default(autoincrement())
  title       String
  description String
  date        DateTime
  classId     Int?
  class       Class?              @relation(fields: [classId], references: [id])
  reads       AnnouncementRead[]
}

/// Marks which announcements a user has seen (Clerk user id matches Student/Teacher/Parent/Admin id).
model AnnouncementRead {
  id             Int          @id @default(autoincrement())
  userId         String
  announcementId Int
  readAt         DateTime     @default(now())
  announcement   Announcement @relation(fields: [announcementId], references: [id], onDelete: Cascade)

  @@unique([userId, announcementId])
  @@index([userId])
}

/// Staff group chat (single room): admins + educators only.
model Message {
  id          String              @id @default(cuid())
  content     String              @default("")
  senderId    String
  createdAt   DateTime            @default(now())
  editedAt    DateTime?
  attachments MessageAttachment[]
  reactions   MessageReaction[]

  @@index([createdAt])
}

model MessageAttachment {
  id         String   @id @default(cuid())
  messageId  String
  url        String
  fileName   String
  mimeType   String
  sizeBytes  Int
  message    Message  @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([messageId])
}

model MessageReaction {
  id        String   @id @default(cuid())
  messageId String
  userId    String
  emoji     String
  message   Message  @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@unique([messageId, userId, emoji])
  @@index([messageId])
}

/// Tracks when a staff chat user last opened the Messages page.
model StaffChatRead {
  userId     String   @id
  lastReadAt DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([lastReadAt])
}

model Zone {
  id          String        @id @default(cuid()) 
  name        String        @unique
  capacity    Int?
  description String?
  color       String?
  lessons     Lesson[]
  activities  Activity[]
  students    StudentZone[]
  teachers    TeacherZone[]
  history     ZoneHistory[]
}

model StudentZone {
  studentId String   @id
  zoneId    String
  movedAt   DateTime @default(now())
  student   Student  @relation(fields: [studentId], references: [id])
  zone      Zone     @relation(fields: [zoneId], references: [id])
}

model StudentLunchGroup {
  studentId  String            @id
  group      LunchGroup?
  movedAt    DateTime          @default(now())
  groupId    String?
  lunchGroup LunchGroupEntity? @relation(fields: [groupId], references: [id], onDelete: Cascade)
  student    Student           @relation(fields: [studentId], references: [id])
}

model Tischspruch {
  id        Int                @id @default(autoincrement())
  title     String             @unique
  createdAt DateTime           @default(now())
  text      String             @default("")
  votes     StudentLunchVote[]
}

model StudentLunchVote {
  studentId     String            @id
  tischspruchId Int
  group         LunchGroup?
  updatedAt     DateTime          @updatedAt
  groupId       String?
  lunchGroup    LunchGroupEntity? @relation(fields: [groupId], references: [id], onDelete: Cascade)
  student       Student           @relation(fields: [studentId], references: [id])
  tischspruch   Tischspruch       @relation(fields: [tischspruchId], references: [id], onDelete: Cascade)
}

model LunchGroupEntity {
  id          String              @id @default(cuid())
  name        String              @unique
  color       String?
  capacity    Int?                @default(15)
  createdAt   DateTime            @default(now())
  assignments StudentLunchGroup[]
  votes       StudentLunchVote[]
  teacherAssignments TeacherLunchGroup[]
}

// Educator assigned to a lunch group for the lunch board (pool = no row).
model TeacherLunchGroup {
  id        String   @id @default(cuid())
  teacherId String
  groupId   String
  teacher   Teacher  @relation(fields: [teacherId], references: [id], onDelete: Cascade)
  lunchGroup LunchGroupEntity @relation(fields: [groupId], references: [id], onDelete: Cascade)

  @@unique([teacherId])
}

model TeacherZone {
  id        String  @id
  teacherId String
  zoneId    String
  teacher   Teacher @relation(fields: [teacherId], references: [id])
  zone      Zone    @relation(fields: [zoneId], references: [id])

  @@unique([teacherId, zoneId])
}

model ZoneHistory {
  id        String   @id
  studentId String
  movedAt   DateTime @default(now())
  zoneId    String
  student   Student  @relation(fields: [studentId], references: [id])
  zone      Zone     @relation(fields: [zoneId], references: [id])
}

model Activity {
  id     Int    @id @default(autoincrement())
  name   String
  zoneId String
  zone   Zone   @relation(fields: [zoneId], references: [id])
}

enum LunchGroup {
  green
  yellow
  red
}

enum UserSex {
  MALE
  FEMALE
}

enum Day {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
}
